# Tablassist

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  prek.toml  pyproject.toml
.github/workflows/: npm.yml  pypi.yml
cli/: .gitignore  README.md  pyproject.toml
cli/src/tablassist/: cli.py  docling_extract.py  docs.py  utils.py
cli/test/: test_cli.py
cli/test/fixtures/: invalid-config.yaml  preview.csv  valid-config.yaml
mcp/: pyproject.toml
plugin/: README.md  biome.json  package.json
plugin/agents/: the-builder.md  the-configurator.md  the-extractor.md  the-pioneer.md  the-scout.md
plugin/src/: agent-tracker.test.ts  agent-tracker.ts  cache.test.ts  cache.ts  cli.test.ts  cli.ts  index.ts
plugin/src/hooks/: agent-config.test.ts  agent-config.ts  command-config.test.ts  command-config.ts  system-prompt.test.ts  system-prompt.ts  temperature.test.ts  temperature.ts  yaml-validation.test.ts  yaml-validation.ts
plugin/src/tools/: api.ts  biolink.ts  discover.ts  discovery.ts  files.test.ts  files.ts  index.test.ts  index.ts  schema.ts  shared.test.ts  shared.ts
src/tablassist/: server.py
