[project]
name = "tablassist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 120
indent-width = 2
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
magic-trailing-comma = false

[tool.pylint.format]
max-line-length = 120
indent-string = "  "

[tool.pylint.design]
max-line-length = 120
max-args = 8
max-attributes = 10
