[project]
name = "tablassist"
version = "1.0.0"
description = "Add your description here"
readme = "./../README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.10.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "tablassert>=7.2.1",
    "textract>=1.6.5",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./src/tablassist"]

[project.scripts]
tablassist = "tablassist.cli:serve"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
